// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/ViolationsInspector/ViolationsList/ViolationsTableRow BusLaneCameraViolation smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper">
                <div class="table-responsive violations-table-body-wrapper">
                  <table class="table table-striped table-sm violations-table">
                    <thead class="thead-light">
                      <tr>
                        <th>
                          Date
                        </th>
                        <th>
                          Violation
                        </th>
                        <th>
                          Location
                        </th>
                        <th>
                          Fines
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr class="violation-row table-primary no-fines-breakdown"
                          data-testid="summons 7310127604"
                      >
                        <td>
                          11/07/2024
                        </td>
                        <td class="violation-description">
                          <div class="icons">
                            <svg aria-labelledby="svg-inline--fa-title-bus"
                                 data-prefix="fas"
                                 data-icon="bus"
                                 class="svg-inline--fa fa-bus "
                                 role="img"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewbox="0 0 576 512"
                            >
                              <title id="svg-inline--fa-title-bus">
                                bus icon
                              </title>
                              <path fill="currentColor"
                                    d="M288 0C422.4 0 512 35.2 512 80l0 16 0 32c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32l0 160c0 17.7-14.3 32-32 32l0 32c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32l0-32-192 0 0 32c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32l0-32c-17.7 0-32-14.3-32-32l0-160c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32c0 0 0 0 0 0l0-32s0 0 0 0l0-16C64 35.2 153.6 0 288 0zM128 160l0 96c0 17.7 14.3 32 32 32l112 0 0-160-112 0c-17.7 0-32 14.3-32 32zM304 288l112 0c17.7 0 32-14.3 32-32l0-96c0-17.7-14.3-32-32-32l-112 0 0 160zM144 400a32 32 0 1 0 0-64 32 32 0 1 0 0 64zm288 0a32 32 0 1 0 0-64 32 32 0 1 0 0 64zM384 80c0-8.8-7.2-16-16-16L208 64c-8.8 0-16 7.2-16 16s7.2 16 16 16l160 0c8.8 0 16-7.2 16-16z"
                              >
                              </path>
                            </svg>
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                        </td>
                        <td class="fines">
                          $100.00
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector/ViolationsList/ViolationsTableRow ParkingViolation smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper">
                <div class="table-responsive violations-table-body-wrapper">
                  <table class="table table-striped table-sm violations-table">
                    <thead class="thead-light">
                      <tr>
                        <th>
                          Date
                        </th>
                        <th>
                          Violation
                        </th>
                        <th>
                          Location
                        </th>
                        <th>
                          Fines
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127603"
                      >
                        <td>
                          11/07/2024
                        </td>
                        <td class="violation-description">
                          <div class="icons">
                            <svg aria-labelledby="svg-inline--fa-title-parking"
                                 data-prefix="fas"
                                 data-icon="square-parking"
                                 class="svg-inline--fa fa-square-parking "
                                 role="img"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewbox="0 0 448 512"
                            >
                              <title id="svg-inline--fa-title-parking">
                                parking icon
                              </title>
                              <path fill="currentColor"
                                    d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32zM192 256l48 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-48 0 0 64zm48 64l-48 0 0 32c0 17.7-14.3 32-32 32s-32-14.3-32-32l0-64 0-120c0-22.1 17.9-40 40-40l72 0c53 0 96 43 96 96s-43 96-96 96z"
                              >
                              </path>
                            </svg>
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                        </td>
                        <td class="fines">
                          $60.00
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector/ViolationsList/ViolationsTableRow RedLightCameraViolation smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper">
                <div class="table-responsive violations-table-body-wrapper">
                  <table class="table table-striped table-sm violations-table">
                    <thead class="thead-light">
                      <tr>
                        <th>
                          Date
                        </th>
                        <th>
                          Violation
                        </th>
                        <th>
                          Location
                        </th>
                        <th>
                          Fines
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr class="violation-row table-danger no-fines-breakdown"
                          data-testid="summons 7310127605"
                      >
                        <td>
                          11/07/2024
                        </td>
                        <td class="violation-description">
                          <div class="icons">
                            <svg aria-labelledby="svg-inline--fa-title-traffic-light"
                                 data-prefix="fas"
                                 data-icon="traffic-light"
                                 class="svg-inline--fa fa-traffic-light "
                                 role="img"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewbox="0 0 320 512"
                            >
                              <title id="svg-inline--fa-title-traffic-light">
                                traffic-light icon
                              </title>
                              <path fill="currentColor"
                                    d="M64 0C28.7 0 0 28.7 0 64L0 352c0 88.4 71.6 160 160 160s160-71.6 160-160l0-288c0-35.3-28.7-64-64-64L64 0zm96 416a48 48 0 1 1 0-96 48 48 0 1 1 0 96zm48-176a48 48 0 1 1 -96 0 48 48 0 1 1 96 0zm-48-80a48 48 0 1 1 0-96 48 48 0 1 1 0 96z"
                              >
                              </path>
                            </svg>
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                        </td>
                        <td class="fines">
                          $50.00
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector/ViolationsList/ViolationsTableRow SpeedCameraViolation smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper">
                <div class="table-responsive violations-table-body-wrapper">
                  <table class="table table-striped table-sm violations-table">
                    <thead class="thead-light">
                      <tr>
                        <th>
                          Date
                        </th>
                        <th>
                          Violation
                        </th>
                        <th>
                          Location
                        </th>
                        <th>
                          Fines
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr class="violation-row table-warning no-fines-breakdown"
                          data-testid="summons 7310127606"
                      >
                        <td>
                          11/07/2024
                        </td>
                        <td class="violation-description">
                          <div class="icons">
                            <svg aria-labelledby="svg-inline--fa-title-tachometer-alt"
                                 data-prefix="fas"
                                 data-icon="gauge-high"
                                 class="svg-inline--fa fa-gauge-high "
                                 role="img"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewbox="0 0 512 512"
                            >
                              <title id="svg-inline--fa-title-tachometer-alt">
                                tachometer-alt icon
                              </title>
                              <path fill="currentColor"
                                    d="M0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM288 96a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zM256 416c35.3 0 64-28.7 64-64c0-17.4-6.9-33.1-18.1-44.6L366 161.7c5.3-12.1-.2-26.3-12.3-31.6s-26.3 .2-31.6 12.3L257.9 288c-.6 0-1.3 0-1.9 0c-35.3 0-64 28.7-64 64s28.7 64 64 64zM176 144a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zM96 288a32 32 0 1 0 0-64 32 32 0 1 0 0 64zm352-32a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"
                              >
                              </path>
                            </svg>
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                        </td>
                        <td class="fines">
                          $50.00
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector/ViolationsList/ViolationsTableRow ViolationWithFullFineData smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper">
                <div class="table-responsive violations-table-body-wrapper">
                  <table class="table table-striped table-sm violations-table">
                    <thead class="thead-light">
                      <tr>
                        <th>
                          Date
                        </th>
                        <th>
                          Violation
                        </th>
                        <th>
                          Location
                        </th>
                        <th>
                          Fines
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr class="violation-row table-primary "
                          data-testid="summons 7310127607"
                      >
                        <td>
                          11/07/2024
                        </td>
                        <td class="violation-description">
                          <div class="icons">
                            <svg aria-labelledby="svg-inline--fa-title-bus"
                                 data-prefix="fas"
                                 data-icon="bus"
                                 class="svg-inline--fa fa-bus "
                                 role="img"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewbox="0 0 576 512"
                            >
                              <title id="svg-inline--fa-title-bus">
                                bus icon
                              </title>
                              <path fill="currentColor"
                                    d="M288 0C422.4 0 512 35.2 512 80l0 16 0 32c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32l0 160c0 17.7-14.3 32-32 32l0 32c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32l0-32-192 0 0 32c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32l0-32c-17.7 0-32-14.3-32-32l0-160c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32c0 0 0 0 0 0l0-32s0 0 0 0l0-16C64 35.2 153.6 0 288 0zM128 160l0 96c0 17.7 14.3 32 32 32l112 0 0-160-112 0c-17.7 0-32 14.3-32 32zM304 288l112 0c17.7 0 32-14.3 32-32l0-96c0-17.7-14.3-32-32-32l-112 0 0 160zM144 400a32 32 0 1 0 0-64 32 32 0 1 0 0 64zm288 0a32 32 0 1 0 0-64 32 32 0 1 0 0 64zM384 80c0-8.8-7.2-16-16-16L208 64c-8.8 0-16 7.2-16 16s7.2 16 16 16l160 0c8.8 0 16-7.2 16-16z"
                              >
                              </path>
                            </svg>
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                        </td>
                        <td class="fines">
                          <div class="fines-breakdown">
                            <div class="summary-box keys">
                              <div>
                                Initial:
                              </div>
                              <div>
                                Interest:
                              </div>
                              <div class="fine-added">
                                Penalties:
                              </div>
                              <div>
                                Total:
                              </div>
                              <div>
                                Reductions:
                              </div>
                              <div class="fine-subtracted">
                                Paid:
                              </div>
                              <div class>
                                Outstanding:
                              </div>
                            </div>
                            <div class="summary-box values fines"
                                 role="math"
                                 aria-label="$100.00 fined + $10.00 in interest + $25.00 in penalties - $10.00 reduced - $20.00 paid = $105.00 oustanding"
                            >
                              <div class="math-symbols">
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div class="fine-added">
                                  +&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div class="fine-subtracted">
                                  –&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                              </div>
                              <div class="amounts">
                                <div>
                                  $100.00
                                </div>
                                <div>
                                  $10.00
                                </div>
                                <div class="fine-added">
                                  $25.00
                                </div>
                                <div>
                                  $135.00
                                </div>
                                <div>
                                  $10.00
                                </div>
                                <div class="fine-subtracted">
                                  $20.00
                                </div>
                                <div class>
                                  $105.00
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector/ViolationsList/ViolationsTableRow ViolationWithFullFineDataAndFullLocation smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper">
                <div class="table-responsive violations-table-body-wrapper">
                  <table class="table table-striped table-sm violations-table">
                    <thead class="thead-light">
                      <tr>
                        <th>
                          Date
                        </th>
                        <th>
                          Violation
                        </th>
                        <th>
                          Location
                        </th>
                        <th>
                          Fines
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr class="violation-row table-primary "
                          data-testid="summons 7310127609"
                      >
                        <td>
                          11/07/2024
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            Bus Lane Violation
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (Jay St @ Johnson St)
                          </span>
                        </td>
                        <td class="fines">
                          <div class="fines-breakdown">
                            <div class="summary-box keys">
                              <div>
                                Initial:
                              </div>
                              <div>
                                Interest:
                              </div>
                              <div class="fine-added">
                                Penalties:
                              </div>
                              <div>
                                Total:
                              </div>
                              <div>
                                Reductions:
                              </div>
                              <div class="fine-subtracted">
                                Paid:
                              </div>
                              <div class>
                                Outstanding:
                              </div>
                            </div>
                            <div class="summary-box values fines"
                                 role="math"
                                 aria-label="$100.00 fined + $10.00 in interest + $25.00 in penalties - $10.00 reduced - $20.00 paid = $105.00 oustanding"
                            >
                              <div class="math-symbols">
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div class="fine-added">
                                  +&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div class="fine-subtracted">
                                  –&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                              </div>
                              <div class="amounts">
                                <div>
                                  $100.00
                                </div>
                                <div>
                                  $10.00
                                </div>
                                <div class="fine-added">
                                  $25.00
                                </div>
                                <div>
                                  $135.00
                                </div>
                                <div>
                                  $10.00
                                </div>
                                <div class="fine-subtracted">
                                  $20.00
                                </div>
                                <div class>
                                  $105.00
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector/ViolationsList/ViolationsTableRow ViolationWithFullLocation smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper">
                <div class="table-responsive violations-table-body-wrapper">
                  <table class="table table-striped table-sm violations-table">
                    <thead class="thead-light">
                      <tr>
                        <th>
                          Date
                        </th>
                        <th>
                          Violation
                        </th>
                        <th>
                          Location
                        </th>
                        <th>
                          Fines
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr class="violation-row table-primary no-fines-breakdown"
                          data-testid="summons 7310127608"
                      >
                        <td>
                          11/07/2024
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            Bus Lane Violation
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (Jay St @ Johnson St)
                          </span>
                        </td>
                        <td class="fines">
                          $100.00
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
